# home-media-ai

./: .gitattributes  .gitignore  CONFIGURATION_SUMMARY.md  Dockerfile  FINAL_TEST_REPORT.md  GEMINI.md  LICENSE  MIGRATION_SUMMARY.md  README.md  TESTING.md  TEST_RESULTS.md  config.docker.yaml  config.example.yaml  config.synology.yaml  docker-compose.yml  environment-server.yaml  environment-worker.yaml  environment.yaml  environment.yml  home_media.db  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_api.db
.github/workflows/: main-push.yml  tests.yml
doc/: database_schema.md  database_schema.mmd
docs/: CONFIGURATION.md  database_schema.md  database_schema.mmd
docs/setup/: alienware_laptop.md  macbook_pro.md  synology_nas.md
examples/: basic_analysis.py  quality_organization.py
home_media_ai/: __init__.py  cli.py
home_media_ai/config/: __init__.py  settings.py
home_media_ai/content/: __init__.py  detection.py  identifier.py
home_media_ai/core/: __init__.py  analyzer.py  database.py
home_media_ai/quality/: __init__.py  evaluator.py  metrics.py
home_media_ai/utils/: __init__.py  file_utils.py  logging.py
scripts/: server_startup.sh
src/matlab/: appendDatabase.m  collectData.m  computeFileHash.m  determineMediaType.m  export_high_rated_2025.m  extractField.m  extractGPS.m  generate_thumbnails.m  generate_thumbnails_simple.m  getDefaultStorageRootMap.m  getExifField.m  orientImage.m  parseStoragePath.m  parseXMP.m  readExifWithExifTool.m  readImage.m  removeRow.m  sandbox.m  thumbnail_db_helper.py
src/python/: ReadMe.md  config.dev.yaml  config.yaml  config_template.yaml  import_flora_wfo_data.py  main.py  media_query_examples.md
src/python/home_media/: README.md  __init__.py  __version__.py  config.py  organizer.py  utils.py
src/python/home_media/ai/: __init__.py
src/python/home_media/config/: __init__.py
src/python/home_media/core/: __init__.py
src/python/home_media/db/: __init__.py  models.py
src/python/home_media/media/: __init__.py
src/python/home_media/models/: __init__.py  enums.py  image.py
src/python/home_media/scanner/: __init__.py  directory.py  exif.py  grouper.py  patterns.py
src/python/home_media_ai/: __init__.py  config.py  constants.py  database.py  exif_extractor.py  importer.py  io.py  media.py  media_query.py  rating_sync.py  scanner.py  thumbnails.py  utils.py
src/python/notebooks/: image_explorer.ipynb  live_development.ipynb  sandbox.ipynb  yolo_analysis.ipynb  yolo_explorer_nb.ipynb  yolo_test_notebook.ipynb
src/python/scripts/: debug_thumbnail_paths.py  explore_metadata.py  fix_directory_paths.py  fix_thumbnail_names.sh  fix_triggers.py  generate_thumbnails.py  import_flora_wfo_data.py  ingest.py  manage_users.py  media_dashboard.py  organize_photos.py  refresh_final_status.py  scan_media.py  setup_database.py  setup_db.py  sync_ratings_2025.py  validate_metadata.py  worker.py
src/python/tests/: test_exif_extractor.py  test_io.py  test_scanner.py  test_utils.py
src/python/tests/fixtures/: 2024-10-11_12-19-49.jpg.xmp  2024-10-11_12-19-50.dng  2024-10-11_12-19-50.dng.xmp  2024-10-11_12-19-51.dng  2024-10-11_12-19-51.dng.xmp  2024-10-11_12-19-51.jpg.xmp
src/sql/: 01_create_taxonomies.sql  02_create_media.sql  03_create_linking.sql  04_migrate_existing_data.sql  05_useful_queries.sql  06_add_exif_columns.sql  07_add_is_final_column.sql  08_parent_child_utilities.sql  09_remove_is_final_triggers.sql
src/web/: Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
src/web/templates/: base.html  index.html  login.html  rating.html  rating_select.html  relationships.html  viewer.html
tests/: __init__.py  conftest.py  test_config.py  test_quality.py
tests/models/: __init__.py  test_enums.py  test_image.py
tests/scanner/: __init__.py  test_directory.py  test_exif.py  test_grouper.py  test_patterns.py
